--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'streamlit'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mstreamlit\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mst\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mplotly\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mexpress\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpex\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39maltair\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mal\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'streamlit'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import streamlit as st\n",
     "import plotly.express as pex\n",
@@ -27,24 +15,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m cars_ad \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39m/Users/barrett22/Desktop/Sprint_4_Project/Sprint4Project/vehicles_us.csv\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m sample(cars_ad)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>odometer</th>\n",
+       "      <th>is_4wd</th>\n",
+       "      <th>days_listed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>51525.000000</td>\n",
+       "      <td>47906.000000</td>\n",
+       "      <td>46265.000000</td>\n",
+       "      <td>43633.000000</td>\n",
+       "      <td>25572.0</td>\n",
+       "      <td>51525.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>12132.464920</td>\n",
+       "      <td>2009.750470</td>\n",
+       "      <td>6.125235</td>\n",
+       "      <td>115553.461738</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>39.55476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>10040.803015</td>\n",
+       "      <td>6.282065</td>\n",
+       "      <td>1.660360</td>\n",
+       "      <td>65094.611341</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>28.20427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1908.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>2006.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>70000.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>19.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>9000.000000</td>\n",
+       "      <td>2011.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>113000.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>33.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>16839.000000</td>\n",
+       "      <td>2014.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>155000.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>53.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>375000.000000</td>\n",
+       "      <td>2019.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>990000.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>271.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               price    model_year     cylinders       odometer   is_4wd  \\\n",
+       "count   51525.000000  47906.000000  46265.000000   43633.000000  25572.0   \n",
+       "mean    12132.464920   2009.750470      6.125235  115553.461738      1.0   \n",
+       "std     10040.803015      6.282065      1.660360   65094.611341      0.0   \n",
+       "min         1.000000   1908.000000      3.000000       0.000000      1.0   \n",
+       "25%      5000.000000   2006.000000      4.000000   70000.000000      1.0   \n",
+       "50%      9000.000000   2011.000000      6.000000  113000.000000      1.0   \n",
+       "75%     16839.000000   2014.000000      8.000000  155000.000000      1.0   \n",
+       "max    375000.000000   2019.000000     12.000000  990000.000000      1.0   \n",
+       "\n",
+       "       days_listed  \n",
+       "count  51525.00000  \n",
+       "mean      39.55476  \n",
+       "std       28.20427  \n",
+       "min        0.00000  \n",
+       "25%       19.00000  \n",
+       "50%       33.00000  \n",
+       "75%       53.00000  \n",
+       "max      271.00000  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "cars_ad = pd.read_csv('/Users/barrett22/Desktop/Sprint_4_Project/Sprint4Project/vehicles_us.csv')\n",
-    "sample(cars_ad)"
+    "cars_ad.describe()"
    ]
   },
   {
@@ -57,7 +166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -71,12 +180,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
    }
   }
  },
