added condition bar chart, and checkbox to show scatterplot or histogram for mean price by model year

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "4    automatic   sedan       black     NaN  2019-04-02           28  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -262,113 +262,113 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>16065</th>\n",
-       "      <td>18200</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>chevrolet camaro lt coupe 2d</td>\n",
-       "      <td>good</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>other</td>\n",
-       "      <td>coupe</td>\n",
-       "      <td>black</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2019-04-15</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21259</th>\n",
-       "      <td>105</td>\n",
-       "      <td>2011.0</td>\n",
-       "      <td>chrysler 300</td>\n",
-       "      <td>excellent</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>70000.0</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>sedan</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2018-07-11</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33652</th>\n",
-       "      <td>9999</td>\n",
-       "      <td>2012.0</td>\n",
-       "      <td>chrysler 300</td>\n",
-       "      <td>excellent</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>144652.0</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>sedan</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2018-12-19</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16042</th>\n",
-       "      <td>10950</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>ford fusion</td>\n",
+       "      <th>26222</th>\n",
+       "      <td>5400</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>honda civic</td>\n",
        "      <td>good</td>\n",
        "      <td>4.0</td>\n",
        "      <td>gas</td>\n",
-       "      <td>111123.0</td>\n",
+       "      <td>125490.0</td>\n",
        "      <td>automatic</td>\n",
        "      <td>sedan</td>\n",
-       "      <td>grey</td>\n",
+       "      <td>silver</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2018-08-10</td>\n",
-       "      <td>49</td>\n",
+       "      <td>2018-06-02</td>\n",
+       "      <td>43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28380</th>\n",
-       "      <td>7150</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>kia soul</td>\n",
+       "      <th>27090</th>\n",
+       "      <td>12495</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>toyota corolla</td>\n",
        "      <td>like new</td>\n",
        "      <td>4.0</td>\n",
        "      <td>gas</td>\n",
        "      <td>NaN</td>\n",
        "      <td>automatic</td>\n",
-       "      <td>SUV</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>silver</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019-03-22</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15423</th>\n",
+       "      <td>11795</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>chevrolet silverado 1500</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>truck</td>\n",
        "      <td>white</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2018-07-08</td>\n",
-       "      <td>8</td>\n",
+       "      <td>2019-03-08</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50769</th>\n",
+       "      <td>5950</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>toyota prius</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>hybrid</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>hatchback</td>\n",
+       "      <td>silver</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019-03-15</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22673</th>\n",
+       "      <td>5928</td>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>nissan versa</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019-03-12</td>\n",
+       "      <td>74</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       price  model_year                         model  condition  cylinders  \\\n",
-       "16065  18200      2014.0  chevrolet camaro lt coupe 2d       good        6.0   \n",
-       "21259    105      2011.0                  chrysler 300  excellent        6.0   \n",
-       "33652   9999      2012.0                  chrysler 300  excellent        6.0   \n",
-       "16042  10950      2015.0                   ford fusion       good        4.0   \n",
-       "28380   7150      2015.0                      kia soul   like new        4.0   \n",
+       "       price  model_year                     model  condition  cylinders  \\\n",
+       "26222   5400      2008.0               honda civic       good        4.0   \n",
+       "27090  12495      2016.0            toyota corolla   like new        4.0   \n",
+       "15423  11795      2012.0  chevrolet silverado 1500  excellent        6.0   \n",
+       "50769   5950      2010.0              toyota prius  excellent        4.0   \n",
+       "22673   5928      2014.0              nissan versa  excellent        4.0   \n",
        "\n",
-       "      fuel  odometer transmission   type paint_color  is_4wd date_posted  \\\n",
-       "16065  gas       NaN        other  coupe       black     0.0  2019-04-15   \n",
-       "21259  gas   70000.0    automatic  sedan         NaN     0.0  2018-07-11   \n",
-       "33652  gas  144652.0    automatic  sedan         NaN     0.0  2018-12-19   \n",
-       "16042  gas  111123.0    automatic  sedan        grey     0.0  2018-08-10   \n",
-       "28380  gas       NaN    automatic    SUV       white     0.0  2018-07-08   \n",
+       "         fuel  odometer transmission       type paint_color  is_4wd  \\\n",
+       "26222     gas  125490.0    automatic      sedan      silver     0.0   \n",
+       "27090     gas       NaN    automatic      sedan      silver     0.0   \n",
+       "15423     gas       NaN    automatic      truck       white     0.0   \n",
+       "50769  hybrid       NaN    automatic  hatchback      silver     0.0   \n",
+       "22673     gas       NaN    automatic      sedan        blue     0.0   \n",
        "\n",
-       "       days_listed  \n",
-       "16065           15  \n",
-       "21259          100  \n",
-       "33652           12  \n",
-       "16042           49  \n",
-       "28380            8  "
+       "      date_posted  days_listed  \n",
+       "26222  2018-06-02           43  \n",
+       "27090  2019-03-22            6  \n",
+       "15423  2019-03-08           47  \n",
+       "50769  2019-03-15           67  \n",
+       "22673  2019-03-12           74  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2065,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2683,7 +2683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2766,7 +2766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2777,17 +2777,21 @@
        },
        "data": [
         {
+         "alignmentgroup": "True",
          "hovertemplate": "condition=%{x}<br>mean_price=%{y}<extra></extra>",
          "legendgroup": "",
          "marker": {
           "color": "#000001",
-          "symbol": "circle"
+          "pattern": {
+           "shape": ""
+          }
          },
-         "mode": "markers",
          "name": "",
+         "offsetgroup": "",
          "orientation": "v",
          "showlegend": false,
-         "type": "scatter",
+         "textposition": "auto",
+         "type": "bar",
          "x": [
           "new",
           "like new",
@@ -2809,6 +2813,7 @@
         }
        ],
        "layout": {
+        "barmode": "relative",
         "legend": {
          "tracegroupgap": 0
         },
@@ -3319,8 +3324,8 @@
     }
    ],
    "source": [
-    "mean_price_by_condition_scatter = pex.scatter(mean_cost_by_condition, y=\"mean_price\")\n",
-    "mean_price_by_condition_scatter.show()"
+    "mean_price_by_condition_bar = pex.bar(mean_cost_by_condition, y=\"mean_price\")\n",
+    "mean_price_by_condition_bar.show()"
    ]
   },
   {
