--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1,12 +1,34 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Car Advertisement EDA & SDA Study\n",
+    "\n",
+    "In this project, we will conduct a statistical and explorative data analysis of the vehicles sold in the US. The data comes from a cars advertisement dataset in a .csv file. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import streamlit as st\n",
+    "import plotly.express as pex\n",
+    "import altair as al\n",
+    "import pandas as pd\n",
+    "import scipy as sci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import plotly.express as pex\n",
     "import altair as al\n",
     "import pandas as pd\n",
@@ -164,6 +186,27 @@
     "# Reading csv file to create vehicles  dataframe\n",
     "vehicles_df = pd.read_csv('/Users/barrett22/Desktop/Sprint_4_Project/Sprint4Project/vehicles_us.csv')\n",
     "vehicles_df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At a first glance of the dataset, it looks like we have 13 columns.\n",
+    "price - price of the vehicle\n",
+    "model_year - model year of the vehicle\n",
+    "model - vehicle brand name and model name\n",
+    "condition - condition vehicle is in\n",
+    "cylinders - how many cylinders the engine has\n",
+    "fuel - type of fuel the car uses\n",
+    "odometer - the distance the vehicle has traveled\n",
+    "transmission - automatic or manual trans the vehicle has\n",
+    "type - type of vehicle\n",
+    "paint_color - the vehicle's color\n",
+    "is_4wd - whether or not the vehicle is 4wd, based on looking at the vehicle name it can be assumed that 1 means true and NaN will be filled with 0s\n",
+    "date_posted - date the vehicle was posted for sell\n",
+    "days_listed - how many days the vehicle has been listed for sell"
    ]
   },
   {
@@ -377,6 +420,14 @@
     "# Filling missing values for none 4wd vehicles\n",
     "vehicles_df['is_4wd'].fillna(value=0, inplace=True)\n",
     "vehicles_df.query(\"is_4wd == 0\").sample(5)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Up to this point, we have searched for duplicate entries and found there were none in the data set. We also replaced all NaNs values in the is_4wd column with 0s. I did not think it would be safe to replace the NaNs with values in the odometer column because that is a key indicator of the car's functionality. I also did not want to mislead buyer's with the cylinders' NaNs values because some of those vehicles actually do not have a certain number of cylinders. That would require a lot of manual research to confirm those values. "
    ]
   },
   {
@@ -1375,13 +1426,12 @@
    "source": [
     "# Mean price of vehicles by model_year\n",
     "mean_cost_by_model_yr = vehicles_df.groupby(['model_year']).agg(mean_price=('price','mean')).sort_index().sort_values(by='mean_price', ascending=False)\n",
-    "# mean_price_by_model_yr = vehicles_df.groupby(['model_year'])['price'].agg(['mean'])\n",
     "display(mean_cost_by_model_yr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1442,7 @@
        },
        "data": [
         {
-         "hovertemplate": "model_year=%{x}<br>mean_price=%{y}<extra></extra>",
+         "hovertemplate": "Model Year=%{x}<br>Mean Price=%{y}<extra></extra>",
          "legendgroup": "",
          "marker": {
           "color": "#000001",
@@ -1551,9 +1601,6 @@
         "legend": {
          "tracegroupgap": 0
         },
-        "margin": {
-         "t": 60
-        },
         "template": {
          "data": {
           "candlestick": [
@@ -2030,6 +2077,9 @@
           ]
          }
         },
+        "title": {
+         "text": "Mean Price by Model Year"
+        },
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -2037,7 +2087,7 @@
           1
          ],
          "title": {
-          "text": "model_year"
+          "text": "Model Year"
          }
         },
         "yaxis": {
@@ -2047,7 +2097,7 @@
           1
          ],
          "title": {
-          "text": "mean_price"
+          "text": "Mean Price"
          }
         }
        }
@@ -2059,13 +2109,26 @@
    ],
    "source": [
     "# Scatter plot of mean price by model year\n",
-    "mean_price_by_model_yr_scatter = pex.scatter(mean_cost_by_model_yr, y=\"mean_price\")\n",
+    "mean_price_by_model_yr_scatter = pex.scatter(mean_cost_by_model_yr,  y=\"mean_price\", title='Mean Price by Model Year', labels={\n",
+    "                     \"mean_price\": \"Mean Price\",\n",
+    "                     \"model_year\": \"Model Year\",\n",
+    "                 })\n",
     "mean_price_by_model_yr_scatter.show()"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From this scatterplot showing the mean price of the vehicles in the dataset vs the year the model was made, we can see that some older model cars from around 1945-1970 holding some higher value than more modern cars. This may be because they are considered valuable based on how less available they are compared to newer cars. We also see a consistent incease in the mean price of vehicles from the year 2000 going forward. \n",
+    "\n",
+    "The highest priced mean seems to be in the 1962 and the lowest priced is 1995."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2078,7 +2141,7 @@
         {
          "alignmentgroup": "True",
          "bingroup": "x",
-         "hovertemplate": "mean_price=%{x}<br>count=%{y}<extra></extra>",
+         "hovertemplate": "Mean Price=%{x}<br>count=%{y}<extra></extra>",
          "legendgroup": "",
          "marker": {
           "color": "#000001",
@@ -2170,9 +2233,6 @@
         "legend": {
          "tracegroupgap": 0
         },
-        "margin": {
-         "t": 60
-        },
         "template": {
          "data": {
           "candlestick": [
@@ -2649,6 +2709,9 @@
           ]
          }
         },
+        "title": {
+         "text": "Mean Price By Year Histogram"
+        },
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -2656,7 +2719,7 @@
           1
          ],
          "title": {
-          "text": "mean_price"
+          "text": "Mean Price"
          }
         },
         "yaxis": {
@@ -2677,8 +2740,18 @@
     }
    ],
    "source": [
-    "mean_price_by_yr_his = pex.histogram(mean_cost_by_model_yr, x = 'mean_price')\n",
+    "mean_price_by_yr_his = pex.histogram(mean_cost_by_model_yr, x = 'mean_price', title='Mean Price By Year Histogram', labels={\n",
+    "    \"mean_price\":\"Mean Price\"\n",
+    "})\n",
     "mean_price_by_yr_his.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This histogram above shows that the vehicle price with the most frequency ranges from 5k - 9.99k. The least frequencied price range is 35k-39.99k."
    ]
   },
   {
@@ -2766,7 +2839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2778,7 +2851,7 @@
        "data": [
         {
          "alignmentgroup": "True",
-         "hovertemplate": "condition=%{x}<br>mean_price=%{y}<extra></extra>",
+         "hovertemplate": "condition=%{x}<br>Mean Price=%{y}<extra></extra>",
          "legendgroup": "",
          "marker": {
           "color": "#000001",
@@ -2816,9 +2889,6 @@
         "barmode": "relative",
         "legend": {
          "tracegroupgap": 0
-        },
-        "margin": {
-         "t": 60
         },
         "template": {
          "data": {
@@ -3296,6 +3366,9 @@
           ]
          }
         },
+        "title": {
+         "text": "Mean Price of Vehicle vs Vehicle Condition"
+        },
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -3313,7 +3386,7 @@
           1
          ],
          "title": {
-          "text": "mean_price"
+          "text": "Mean Price"
          }
         }
        }
@@ -3324,15 +3397,39 @@
     }
    ],
    "source": [
-    "mean_price_by_condition_bar = pex.bar(mean_cost_by_condition, y=\"mean_price\")\n",
+    "mean_price_by_condition_bar = pex.bar(mean_cost_by_condition, y=\"mean_price\", title='Mean Price of Vehicle vs Vehicle Condition', labels={\n",
+    "    \"mean_price\":\"Mean Price\",\n",
+    "    \"condition\":\"condition\"\n",
+    "})\n",
     "mean_price_by_condition_bar.show()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "This bar chart shows a relationship between the condition of the vehicle and the mean price. As the condition of the vehicle worsens, the mean price of the vehicle seems to decrease as well. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Study Conclusion\n",
+    "\n",
+    "After conducting our study, we have found some interesting insights. We discovered that some older vehicles from the 1950s and 1960s actually are highly valued as compared to most of the modern vehicles of today. This was shown in our scatterplot that compares the mean price and model year. 1952 had the highest mean cost. However, it is safe to assume due to the amount of available vehicles from the 1950s that are still available, this may be why the vehicles from that era are so highly valued.\n",
+    "\n",
+    "We also discovered that the vehicles prices that occur the most in the US are valued between 5k - 10k, with the least being 35k - 40k. This could be due to people selling their old vehicles that they no longer want or use. That would be an interesting study.\n",
+    "\n",
+    "Lastly, we discovered that the relationship between the vehicle's condition and pricing are correlated. If the condition is newer, then the pricing for the vehicle is most likely going to be higher than a vehicle with an older condition. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
