--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -177,14 +177,16 @@
        "4    automatic   sedan       black     NaN  2019-04-02           28  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Reading csv file to create vehicles  dataframe\n",
-    "vehicles_df = pd.read_csv('/Users/barrett22/Desktop/Sprint_4_Project/Sprint4Project/vehicles_us.csv')\n",
+    "# Enter YOUR file path in the vehicle_csv_path variable\n",
+    "vehicle_csv_path = '/Users/barrett22/Desktop/Sprint_4_Project/Sprint4Project/vehicles_us.csv'\n",
+    "vehicles_df = pd.read_csv(vehicle_csv_path)\n",
     "vehicles_df.head()"
    ]
   },
@@ -211,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +254,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -305,113 +307,106 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>26222</th>\n",
-       "      <td>5400</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>honda civic</td>\n",
+       "      <th>13341</th>\n",
+       "      <td>8495</td>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>ford focus</td>\n",
        "      <td>good</td>\n",
        "      <td>4.0</td>\n",
        "      <td>gas</td>\n",
-       "      <td>125490.0</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>sedan</td>\n",
-       "      <td>silver</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2018-06-02</td>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27090</th>\n",
-       "      <td>12495</td>\n",
-       "      <td>2016.0</td>\n",
-       "      <td>toyota corolla</td>\n",
-       "      <td>like new</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>gas</td>\n",
        "      <td>NaN</td>\n",
        "      <td>automatic</td>\n",
        "      <td>sedan</td>\n",
-       "      <td>silver</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2019-03-22</td>\n",
-       "      <td>6</td>\n",
+       "      <td>2019-01-10</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15423</th>\n",
-       "      <td>11795</td>\n",
-       "      <td>2012.0</td>\n",
-       "      <td>chevrolet silverado 1500</td>\n",
+       "      <th>26840</th>\n",
+       "      <td>2500</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>ram 1500</td>\n",
+       "      <td>good</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>195000.0</td>\n",
+       "      <td>manual</td>\n",
+       "      <td>truck</td>\n",
+       "      <td>silver</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019-01-15</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40828</th>\n",
+       "      <td>3795</td>\n",
+       "      <td>2005.0</td>\n",
+       "      <td>honda odyssey</td>\n",
        "      <td>excellent</td>\n",
        "      <td>6.0</td>\n",
        "      <td>gas</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>168594.0</td>\n",
        "      <td>automatic</td>\n",
-       "      <td>truck</td>\n",
-       "      <td>white</td>\n",
+       "      <td>mini-van</td>\n",
+       "      <td>grey</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2019-03-08</td>\n",
-       "      <td>47</td>\n",
+       "      <td>2018-10-23</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50769</th>\n",
-       "      <td>5950</td>\n",
-       "      <td>2010.0</td>\n",
-       "      <td>toyota prius</td>\n",
+       "      <th>13643</th>\n",
+       "      <td>40000</td>\n",
+       "      <td>1970.0</td>\n",
+       "      <td>dodge charger</td>\n",
        "      <td>excellent</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>hybrid</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>83890.0</td>\n",
        "      <td>automatic</td>\n",
-       "      <td>hatchback</td>\n",
-       "      <td>silver</td>\n",
+       "      <td>coupe</td>\n",
+       "      <td>orange</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2019-03-15</td>\n",
-       "      <td>67</td>\n",
+       "      <td>2018-11-07</td>\n",
+       "      <td>128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22673</th>\n",
-       "      <td>5928</td>\n",
+       "      <th>32986</th>\n",
+       "      <td>11900</td>\n",
        "      <td>2014.0</td>\n",
-       "      <td>nissan versa</td>\n",
+       "      <td>toyota camry</td>\n",
        "      <td>excellent</td>\n",
        "      <td>4.0</td>\n",
        "      <td>gas</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>44708.0</td>\n",
        "      <td>automatic</td>\n",
        "      <td>sedan</td>\n",
-       "      <td>blue</td>\n",
+       "      <td>grey</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2019-03-12</td>\n",
-       "      <td>74</td>\n",
+       "      <td>2019-03-24</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       price  model_year                     model  condition  cylinders  \\\n",
-       "26222   5400      2008.0               honda civic       good        4.0   \n",
-       "27090  12495      2016.0            toyota corolla   like new        4.0   \n",
-       "15423  11795      2012.0  chevrolet silverado 1500  excellent        6.0   \n",
-       "50769   5950      2010.0              toyota prius  excellent        4.0   \n",
-       "22673   5928      2014.0              nissan versa  excellent        4.0   \n",
+       "       price  model_year          model  condition  cylinders fuel  odometer  \\\n",
+       "13341   8495      2014.0     ford focus       good        4.0  gas       NaN   \n",
+       "26840   2500      2006.0       ram 1500       good        6.0  gas  195000.0   \n",
+       "40828   3795      2005.0  honda odyssey  excellent        6.0  gas  168594.0   \n",
+       "13643  40000      1970.0  dodge charger  excellent        8.0  gas   83890.0   \n",
+       "32986  11900      2014.0   toyota camry  excellent        4.0  gas   44708.0   \n",
        "\n",
-       "         fuel  odometer transmission       type paint_color  is_4wd  \\\n",
-       "26222     gas  125490.0    automatic      sedan      silver     0.0   \n",
-       "27090     gas       NaN    automatic      sedan      silver     0.0   \n",
-       "15423     gas       NaN    automatic      truck       white     0.0   \n",
-       "50769  hybrid       NaN    automatic  hatchback      silver     0.0   \n",
-       "22673     gas       NaN    automatic      sedan        blue     0.0   \n",
-       "\n",
-       "      date_posted  days_listed  \n",
-       "26222  2018-06-02           43  \n",
-       "27090  2019-03-22            6  \n",
-       "15423  2019-03-08           47  \n",
-       "50769  2019-03-15           67  \n",
-       "22673  2019-03-12           74  "
+       "      transmission      type paint_color  is_4wd date_posted  days_listed  \n",
+       "13341    automatic     sedan         NaN     0.0  2019-01-10           13  \n",
+       "26840       manual     truck      silver     0.0  2019-01-15           78  \n",
+       "40828    automatic  mini-van        grey     0.0  2018-10-23           28  \n",
+       "13643    automatic     coupe      orange     0.0  2018-11-07          128  \n",
+       "32986    automatic     sedan        grey     0.0  2019-03-24           19  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,16 +418,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vehicles_df['cylinders'] = vehicles_df.groupby(['model', 'model_year'])['cylinders'].transform(lambda x: x.fillna(x.median()))\n",
+    "vehicles_df['cylinders'].fillna(vehicles_df['cylinders'].median(), inplace=True)\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Up to this point, we have searched for duplicate entries and found there were none in the data set. We also replaced all NaNs values in the is_4wd column with 0s. I did not think it would be safe to replace the NaNs with values in the odometer column because that is a key indicator of the car's functionality. I also did not want to mislead buyer's with the cylinders' NaNs values because some of those vehicles actually do not have a certain number of cylinders. That would require a lot of manual research to confirm those values. "
+    "Up to this point, we have searched for duplicate entries and found there were none in the data set. We also replaced all NaNs values in the is_4wd column with 0s. I did not think it would be safe to replace the NaNs with values in the odometer column because that is a key indicator of the car's functionality. Filled in NaNs values in the cylinders' column using the median from the model and model year groupby method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +499,7 @@
        "      <td>2015.0</td>\n",
        "      <td>ram 2500</td>\n",
        "      <td>excellent</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>diesel</td>\n",
        "      <td>NaN</td>\n",
        "      <td>automatic</td>\n",
@@ -622,7 +627,7 @@
        "      <td>2008.0</td>\n",
        "      <td>toyota tundra</td>\n",
        "      <td>like new</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>gas</td>\n",
        "      <td>140000.0</td>\n",
        "      <td>automatic</td>\n",
@@ -670,7 +675,7 @@
        "      <td>2005.0</td>\n",
        "      <td>chevrolet suburban</td>\n",
        "      <td>fair</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>gas</td>\n",
        "      <td>NaN</td>\n",
        "      <td>automatic</td>\n",
@@ -734,7 +739,7 @@
        "      <td>NaN</td>\n",
        "      <td>chevrolet corvette</td>\n",
        "      <td>new</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>gas</td>\n",
        "      <td>35.0</td>\n",
        "      <td>automatic</td>\n",
@@ -799,7 +804,7 @@
       "text/plain": [
        "        price  model_year                     model  condition  cylinders  \\\n",
        "12504  375000      1999.0           nissan frontier       good        6.0   \n",
-       "11359  300000      2015.0                  ram 2500  excellent        NaN   \n",
+       "11359  300000      2015.0                  ram 2500  excellent        6.0   \n",
        "34389  189000      2014.0                ford f-150       good        6.0   \n",
        "1309   189000      2014.0                ford f-150       good        6.0   \n",
        "27375  189000      2014.0                ford f-150       good        6.0   \n",
@@ -807,14 +812,14 @@
        "33434  189000      2014.0                ford f-150       good        6.0   \n",
        "30634  189000      2014.0                ford f-150       good        6.0   \n",
        "34206  175000      2004.0         gmc sierra 2500hd       good        8.0   \n",
-       "41748  145000      2008.0             toyota tundra   like new        NaN   \n",
+       "41748  145000      2008.0             toyota tundra   like new        8.0   \n",
        "24999  140000      2004.0                  ram 2500       good        6.0   \n",
        "36822  123456      2000.0        chevrolet suburban       good        8.0   \n",
-       "42853  123456      2005.0        chevrolet suburban       fair        NaN   \n",
+       "42853  123456      2005.0        chevrolet suburban       fair        8.0   \n",
        "29810  123456      2000.0        chevrolet suburban       good        8.0   \n",
        "45263  120000      2006.0  chevrolet silverado 1500       good        8.0   \n",
        "22833  115000      2012.0     ford f-250 super duty       good        8.0   \n",
-       "20700  109999         NaN        chevrolet corvette        new        8.0   \n",
+       "20700  109999         NaN        chevrolet corvette        new        6.0   \n",
        "31626   94955         NaN             toyota sienna   like new        6.0   \n",
        "4113    90577      2018.0                ford f-150  excellent        6.0   \n",
        "37904   90000      2018.0      ford f350 super duty  excellent        8.0   \n",
@@ -876,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1023,7 @@
        "      <td>2017.0</td>\n",
        "      <td>honda accord</td>\n",
        "      <td>excellent</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>gas</td>\n",
        "      <td>17760.0</td>\n",
        "      <td>automatic</td>\n",
@@ -1034,7 +1039,7 @@
        "      <td>2017.0</td>\n",
        "      <td>dodge charger</td>\n",
        "      <td>excellent</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>gas</td>\n",
        "      <td>NaN</td>\n",
        "      <td>automatic</td>\n",
@@ -1098,7 +1103,7 @@
        "      <td>NaN</td>\n",
        "      <td>dodge charger</td>\n",
        "      <td>excellent</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>gas</td>\n",
        "      <td>25146.0</td>\n",
        "      <td>other</td>\n",
@@ -1162,7 +1167,7 @@
        "      <td>2016.0</td>\n",
        "      <td>ford f-250 sd</td>\n",
        "      <td>excellent</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
        "      <td>gas</td>\n",
        "      <td>65685.0</td>\n",
        "      <td>other</td>\n",
@@ -1248,16 +1253,16 @@
        "11402      1      2015.0         chevrolet camaro  excellent       10.0  gas   \n",
        "11633      1      2018.0            dodge charger  excellent        6.0  gas   \n",
        "11632      1      2019.0         chevrolet camaro  excellent        6.0  gas   \n",
-       "11631      1      2017.0             honda accord  excellent        NaN  gas   \n",
-       "11630      1      2017.0            dodge charger  excellent        NaN  gas   \n",
+       "11631      1      2017.0             honda accord  excellent        4.0  gas   \n",
+       "11630      1      2017.0            dodge charger  excellent        8.0  gas   \n",
        "40243      1      2017.0  jeep wrangler unlimited   like new        6.0  gas   \n",
        "11629      1      2017.0            toyota tundra  excellent        8.0  gas   \n",
        "22901      1      2017.0            jeep wrangler  excellent       10.0  gas   \n",
-       "22900      1         NaN            dodge charger  excellent       10.0  gas   \n",
+       "22900      1         NaN            dodge charger  excellent        6.0  gas   \n",
        "22899      1      2018.0              honda civic  excellent       10.0  gas   \n",
        "22898      1      2016.0                 ram 3500  excellent       10.0  gas   \n",
        "22897      1      2017.0            dodge charger  excellent       10.0  gas   \n",
-       "22896      1      2016.0            ford f-250 sd  excellent        NaN  gas   \n",
+       "22896      1      2016.0            ford f-250 sd  excellent        8.0  gas   \n",
        "22895      1      2014.0            toyota tundra  excellent       10.0  gas   \n",
        "22894      1      2019.0            ford explorer  excellent       10.0  gas   \n",
        "22893      1      2019.0       chevrolet suburban  excellent        8.0  gas   \n",
@@ -1320,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2756,7 +2761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2839,7 +2844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
