added changes and suggestion via reviewer

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2140,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2722,7 +2722,7 @@
          }
         },
         "title": {
-         "text": "Mean Price By Year Histogram"
+         "text": "Mean Price Frequency Over the Years Histogram"
         },
         "xaxis": {
          "anchor": "y",
@@ -2752,10 +2752,13 @@
     }
    ],
    "source": [
-    "mean_price_by_yr_his = pex.histogram(mean_cost_by_model_yr, x = 'mean_price', title='Mean Price By Year Histogram', labels={\n",
+    "cost_by_model_yr = vehicles_df[['model_year','price']]\n",
+    "mean_price_by_model_yr = vehicles_df.groupby(['model_year']).agg(mean_price=('price','mean')).sort_index().sort_values(by='mean_price', ascending=False)\n",
+    "price_by_yr_his = pex.histogram(mean_price_by_model_yr, x = 'mean_price', title='Mean Price Frequency Over the Years Histogram', labels={\n",
     "    \"mean_price\":\"Mean Price\"\n",
     "})\n",
-    "mean_price_by_yr_his.show()"
+    "\n",
+    "price_by_yr_his.show()"
    ]
   },
   {
